jnosql-arangodb: implement GraphDatabaseManager
(cherry picked from commit 7699c0118fb4b505d22cdea0fd5da34ff19918cf)
Signed-off-by: Maximillian Arruda <dearrudam@gmail.com>